force-app/main/default/objects/Servicer_Loan_Number__c/Servicer_Loan_Number__c.object-meta.xml
<CustomObject>
    <label>Servicer Loan Number</label>
    <nameField>
        <label>Servicer Loan Number Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servicer Loan Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>