force-app/main/default/objects/Servicer_Loan_Number__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Servicer Loan Numbers</relationshipLabel>
    <relationshipName>Servicer_Loan_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>