force-app/main/default/objects/Servicer_Loan_Number__c/fields/Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number__c</fullName>
    <externalId>true</externalId>
    <label>Loan Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>