force-app/main/default/objects/Servicer_Loan_Number__c/fields/Servicer_Name__c.field-meta.xml
<CustomField>
    <fullName>Servicer_Name__c</fullName>
    <description>Name of the Seriver</description>
    <inlineHelpText>Name of the Seriver</inlineHelpText>
    <label>Servicer Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>